\name{DiffBindNews}
\title{DiffBind News}
\encoding{UTF-8}

\section{Version 2.5.8}{
  \itemize{
     \item{sort peaks when adding directly via dba.peakset}
   }
}

\section{Version 2.5.7}{
  \itemize{
     \item{fix single peak boundary conditions}
   }
}

\section{Version 2.5.6}{
  \itemize{
     \item{alternate peak counts: pv.resetCounts}
   }
}

\section{Version 2.5.5}{
  \itemize{
     \item{don't add _ if no initString in dba.report}
   }
}

\section{Version 2.5.4}{
  \itemize{
     \item{Bugfix: subset config$fragmentSize when masking}
     \item{Update example peaks to match data objects}
   }
}

\section{Version 2.5.3}{
  \itemize{
    \item{Bug Fixes}
      \itemize{
        \item{Bugfix for Bugfix when returning report as GRanges with only one site}
      }
  }
}


\section{Version 2.5.2}{
  \itemize{
    \item{Bug Fixes}
      \itemize{
        \item{Bugfix when returing report as GRanges with only one site}
        \item{Bugfix: plotting venns of consensus peaksets}
      }
  }
}

\section{Version 2.5.1}{
  \itemize{
    \item{Bug Fixes}
      \itemize{
        \item{Fix buffer overrun causing segfault on MacOS}
      }
  }
}

\section{Version 2.4.0}{

Changes since least release include bug fixes and one new feature:

  \itemize{
     \item{Feature: add new plot - dba.plotVolcano}
   }
}

\section{Version 2.2.0}{

Changes since least release include bug fixes and some new features:

  \itemize{
     \item{Feature: Control which principal components are plotted using components parameter in dba.plotPCA}
     \item{Feature: Control axis range using xrange and yrange parameters in dba.plotMA}
     \item{Feature: Filtering per-contrast using filter and filterFun parameters in dba.analyze)}
     \item{Feature: Flip which group in contrast shows gain/loss (sign of fold change) using bFlip parameter in dba.report}
     \item{Feature: Flip which group in contrast shows gain/loss (sign of fold change) using bFlip parameter in dba.plotMA}
   }
}
