@@ -7,7 +7,7 @@ using namespace Rcpp;
 
 // mergePeaks
 Rcpp::DataFrame mergePeaks(Rcpp::DataFrame data, int maxGap);
-RcppExport SEXP DiffBind_mergePeaks(SEXP dataSEXP, SEXP maxGapSEXP) {
+RcppExport SEXP _DiffBind_mergePeaks(SEXP dataSEXP, SEXP maxGapSEXP) {
 BEGIN_RCPP
     Rcpp::RObject rcpp_result_gen;
     Rcpp::RNGScope rcpp_rngScope_gen;
@@ -19,7 +19,7 @@ END_RCPP
 }
 // mergeScores
 Rcpp::List mergeScores(Rcpp::DataFrame sMerged, Rcpp::NumericVector sScore, Rcpp::DataFrame sPeaks);
-RcppExport SEXP DiffBind_mergeScores(SEXP sMergedSEXP, SEXP sScoreSEXP, SEXP sPeaksSEXP) {
+RcppExport SEXP _DiffBind_mergeScores(SEXP sMergedSEXP, SEXP sScoreSEXP, SEXP sPeaksSEXP) {
 BEGIN_RCPP
     Rcpp::RObject rcpp_result_gen;
     Rcpp::RNGScope rcpp_rngScope_gen;
@@ -32,7 +32,7 @@ END_RCPP
 }
 // peakOrder
 Rcpp::RObject peakOrder(SEXP schrom, SEXP sleft, SEXP sright);
-RcppExport SEXP DiffBind_peakOrder(SEXP schromSEXP, SEXP sleftSEXP, SEXP srightSEXP) {
+RcppExport SEXP _DiffBind_peakOrder(SEXP schromSEXP, SEXP sleftSEXP, SEXP srightSEXP) {
 BEGIN_RCPP
     Rcpp::RObject rcpp_result_gen;
     Rcpp::RNGScope rcpp_rngScope_gen;
@@ -42,4 +42,16 @@ BEGIN_RCPP
     rcpp_result_gen = Rcpp::wrap(peakOrder(schrom, sleft, sright));
     return rcpp_result_gen;
 END_RCPP
+}
+
+static const R_CallMethodDef CallEntries[] = {
+    {"_DiffBind_mergePeaks", (DL_FUNC) &_DiffBind_mergePeaks, 2},
+    {"_DiffBind_mergeScores", (DL_FUNC) &_DiffBind_mergeScores, 3},
+    {"_DiffBind_peakOrder", (DL_FUNC) &_DiffBind_peakOrder, 3},
+    {NULL, NULL, 0}
+};
+
+RcppExport void R_init_DiffBind(DllInfo *dll) {
+    R_registerRoutines(dll, NULL, CallEntries, NULL, NULL);
+    R_useDynamicSymbols(dll, FALSE);
 }
